# chatterbox-playground

./: README.md  chatterbox_cli.py  example_en.txt  example_fr.txt  pyproject.toml
